--- a/Galeria.html
+++ b/Galeria.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=611OiR"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=611OiR" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=mAIkyw"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=mAIkyw" type="text/css">
 
   
   
@@ -108,6 +108,48 @@
   </div>
 </section>
 
+<section data-bs-version="5.1" class="gallery4 cid-uLG2pQxoKL" id="gallery04-20">
+  
+  
+  <div class="container-fluid gallery-wrapper">
+    <div class="row justify-content-center">
+      <div class="col-12 content-head">
+        
+      </div>
+    </div>
+    <div class="grid-container">
+      <div class="grid-container-1" style="transform: translate3d(-200px, 0px, 0px);">
+        <div class="grid-item">
+          <img src="assets/images/469121843-9170775492954653-8853728228088159202-n.jpg-414x414.jpg" alt="Mobirise Website Builder">
+        </div>
+        <div class="grid-item">
+          <img src="assets/images/495646364-1300653148729939-2495000094290336843-n.jpg-414x414.jpg" alt="Mobirise Website Builder">
+        </div>
+        <div class="grid-item">
+          <img src="assets/images/488265033-1264430079018913-3696920378984771791-n.jpg-414x414.jpg" alt="Mobirise Website Builder">
+        </div>
+        <div class="grid-item">
+          <img src="assets/images/495177654-1298524322276155-6707826979933186470-n-1.jpg-414x414.jpg" alt="Mobirise Website Builder">
+        </div>
+      </div>
+      <div class="grid-container-2" style="transform: translate3d(-70px, 0px, 0px);">
+        <div class="grid-item">
+          <img src="assets/images/484868598-9748881051810758-4358668973086120540-n.jpg-414x414.jpg" alt="Mobirise Website Builder">
+        </div>
+        <div class="grid-item">
+          <img src="assets/images/465789911-8990192911012913-252436420142659572-n.jpg-717x538.jpg" alt="Mobirise Website Builder">
+        </div>
+        <div class="grid-item">
+          <img src="assets/images/465744590-8994742950557909-6573471803631261692-n.jpg-717x436.jpg" alt="Mobirise Website Builder">
+        </div>
+        <div class="grid-item">
+          <img src="assets/images/465662628-8994343640597840-5983425952369175455-n.jpg-717x538.jpg" alt="Mobirise Website Builder">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section data-bs-version="5.1" class="header5 cid-uLFT9kPO2n" id="header05-1u">
 	
 
@@ -167,7 +209,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3984290" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/drag-drop-website-builder.html">Drag & Drop Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/scrollgallery/scroll-gallery.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3984290" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/scrollgallery/scroll-gallery.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
