--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=MiZtaS"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=MiZtaS" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=W6Ntix"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=W6Ntix" type="text/css">
 
   
   
@@ -52,8 +52,8 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-						<a class="nav-link link text-black text-primary display-4" href="Leyendas.html#header05-1n">Leyendas</a>
-					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="Galeria.html#gallery04-1y">Galería</a></li></ul>
+						<a class="nav-link link text-black text-primary display-4" href="page3.html#top">Estadísticas</a>
+					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="Leyendas.html#header05-1n">Leyendas</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="Galeria.html#gallery04-1y">Galería</a></li></ul>
 				
 				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-black display-4" href="index.html#timeline02-1k">Calendario</a></div>
 			</div>
@@ -107,16 +107,16 @@
 
 <section data-bs-version="5.1" class="timeline02 cid-uL178UchVt" id="timeline02-1k">
   
-  <div class="container">
+  <div class="container-fluid">
     <div class="row justify-content-center">
       <div class="col-12 mb-5 content-head">
-        <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">Calendario</h3>
+        <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-1">Calendario</h3>
         
       </div>
     </div>
     <div class="row justify-content-center item features-without-image active">
       <div class="col-12 col-lg">
-        <p class="mbr-card-subtitle mbr-fonts-style mt-0 mb-2 display-7"><br><br><br><br><br><br>8/5/25&nbsp; &nbsp;-&nbsp; &nbsp;8:20 pm</p>
+        <p class="mbr-card-subtitle mbr-fonts-style mt-0 mb-2 display-7"><br>8/5/25&nbsp; &nbsp;-&nbsp; &nbsp;8:20 pm</p>
         <h5 class="mbr-card-title mbr-fonts-style mt-0 mb-2 display-5">
           <strong>Los Reyes 1<br>La Palma 2</strong></h5>
         <p class="mbr-text mbr-fonts-style mt-0 display-7"></p>
@@ -128,7 +128,7 @@
       </div>
     </div><div class="row justify-content-center item features-without-image">
       <div class="col-12 col-lg">
-        <p class="mbr-card-subtitle mbr-fonts-style mt-0 mb-2 display-7"><br><br><br><br><br><br>15/5/25&nbsp; &nbsp;-&nbsp; &nbsp;9:00 pm</p>
+        <p class="mbr-card-subtitle mbr-fonts-style mt-0 mb-2 display-7"><br>15/5/25&nbsp; &nbsp;-&nbsp; &nbsp;9:00 pm</p>
         <h5 class="mbr-card-title mbr-fonts-style mt-0 mb-2 display-5">
           <strong>Los Reyes 3<br>Trotamundos 1</strong></h5>
         <p class="mbr-text mbr-fonts-style mt-0 display-7"></p>
@@ -140,7 +140,7 @@
       </div>
     </div><div class="row justify-content-center item features-without-image">
       <div class="col-12 col-lg">
-        <p class="mbr-card-subtitle mbr-fonts-style mt-0 mb-2 display-7"><br><br><br><br><br><br>22/5/25&nbsp; &nbsp;-&nbsp; &nbsp;8:30 pm</p>
+        <p class="mbr-card-subtitle mbr-fonts-style mt-0 mb-2 display-7"><br>22/5/25&nbsp; &nbsp;-&nbsp; &nbsp;8:30 pm</p>
         <h5 class="mbr-card-title mbr-fonts-style mt-0 mb-2 display-5">
           <strong>Los Reyes&nbsp;<br>Queretana</strong></h5>
         <p class="mbr-text mbr-fonts-style mt-0 display-7"></p>
@@ -224,7 +224,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3984290" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+
   
   
   <input name="animation" type="hidden">
