--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=GA5kGY"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=GA5kGY" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=RPVlF2"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=RPVlF2" type="text/css">
 
   
   
@@ -168,9 +168,9 @@
             <div class="card col-12 col-md-5">
                 <div class="card-wrapper">
                     <div class="text-wrapper">
-                        <h5 class="cardTitle mbr-fonts-style mb-2 display-5"></h5>
+                        <h5 class="cardTitle mbr-fonts-style mb-2 display-5"><strong>email: <a href="mailto:heraldo@losreyescb.com" class="text-primary">heraldo@losreyescb.com</a></strong></h5>
                     <ul class="list mbr-fonts-style display-7">
-                        <li class="mbr-text item-wrap"><span style="font-size: calc(1.14rem + 0.26 * ((100vw - 62rem) / 25));">Email: </span><a href="mailto:heraldo@losreyescb.com" class="text-primary" style="font-size: calc(1.14rem + 0.26 * ((100vw - 62rem) / 25));">heraldo@losreyescb.com</a><br></li><li class="mbr-text item-wrap"><br></li><li class="mbr-text item-wrap"><br></li>
+                        <li class="mbr-text item-wrap"><br></li>
                         <li class="mbr-text item-wrap">Dirección: </li><li class="mbr-text item-wrap">Ejército Republicano s/n, La Santa Cruz, La Cruz, 76020 Santiago de Querétaro, Qro.</li><li class="mbr-text item-wrap"><br></li>
                     </ul>
                     </div>
@@ -222,7 +222,7 @@
             </div>
         </div>
     </div>
-  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3984290" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/no-code-website-builder.html">No Code Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
