--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=VCv5Ea"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=VCv5Ea" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=VFv3gV"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=VFv3gV" type="text/css">
 
   
   
@@ -116,7 +116,7 @@
       <div class="col-12 col-lg">
         <p class="mbr-card-subtitle mbr-fonts-style mt-0 mb-2 display-7"><br>8/5/25&nbsp; &nbsp;-&nbsp; &nbsp;8:20 pm</p>
         <h5 class="mbr-card-title mbr-fonts-style mt-0 mb-2 display-5">
-          <strong>Los Reyes 1<br>La Palma 2</strong></h5>
+          <strong>Los Reyes&nbsp;<br>La Palma&nbsp;</strong></h5>
         <p class="mbr-text mbr-fonts-style mt-0 display-7"></p>
       </div>
       <div class="col-md-12 col-lg-8 item-wrapper">
@@ -128,7 +128,7 @@
       <div class="col-12 col-lg">
         <p class="mbr-card-subtitle mbr-fonts-style mt-0 mb-2 display-7"><br>15/5/25&nbsp; &nbsp;-&nbsp; &nbsp;9:00 pm</p>
         <h5 class="mbr-card-title mbr-fonts-style mt-0 mb-2 display-5">
-          <strong>Los Reyes 3<br>Trotamundos 1</strong></h5>
+          <strong>Los Reyes&nbsp;<br>Trotamundos&nbsp;</strong></h5>
         <p class="mbr-text mbr-fonts-style mt-0 display-7"></p>
       </div>
       <div class="col-md-12 col-lg-8 item-wrapper">
@@ -145,7 +145,7 @@
       </div>
       <div class="col-md-12 col-lg-8 item-wrapper">
         <div class="image-wrapper mb-5">
-          <img src="assets/images/whatsapp-image-2025-05-17-at-1.47.59-pm.jpeg-1-1079x481.jpg" alt="LRCB Web" data-slide-to="2" data-bs-slide-to="3">
+          <img src="assets/images/reyes-29-may-1437x1078.jpg" alt="LRCB Web" data-slide-to="2" data-bs-slide-to="3">
         </div>
       </div>
     </div>
@@ -222,7 +222,7 @@
             </div>
         </div>
     </div>
-</section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3984290" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-creator.html">AI Website Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
